<resources>
    <string name="app_name">Iteso Store</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_section1">Technology</string>
    <string name="title_section2">Home</string>
    <string name="title_section3">Electronics</string>
    <string name="fragment_technology_text">Tech stuff goes here!</string>
    <string name="fragment_home_text">Home stuff goes here!</string>
    <string name="fragment_electronics_text">Electronics stuff goes here!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logOut">LogOut</string>
    <string name="action_privacyPolicy">PrivacyPolicy</string>
    <string name="item_product_share">SHARE</string>
    <string name="item_product_seeMore">SEE MORE</string>
    <string name="item_product_store">Best Buy</string>
    <string name="item_product_location">Guadalajara, Jalisco</string>
    <string name="item_product_phone">35407199</string>
    <string name="activity_detail_save">Save</string>
    <string name="activity_detail_cancel">Cancel</string>
    <string name="activity_detail_title_hint">Introduce title...</string>
    <string name="activity_detail_store_hint">Ingrese store...</string>
    <string name="activity_detail_location_hint">Ingrese location...</string>
    <string name="activity_detail_phone_hint">Introduce phone...</string>
    <string name="activity_splash_welcome">WELCOME TO ITESO PRODUCTS</string>


</resources>
